--- a/index.html
+++ b/index.html
@@ -1,32 +1,31 @@
 <!DOCTYPE html>
-<html lang=pt-BR></html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Yara lindona</title>
+    <title>yara</title>
+    <link rel="stylesheet" href="index.css">
+    
 </head>
 <body>
-    <h1>elon musk</h1>
-    <h2>fases da vida</h2>
-    <h3>de 1 a 5</h3>
-    <h3>sarinha lindona</h3>
-    <h4>oi bom dia</h4>
-    <table border="1">
-<tr>  
-  <td>primeira linha e primeira coluna</td>
-  <td>primeira linha e segunda coluna</td>
-  <td>primeira linha e terceira coluna</td>
-  
+    <nav>
+        <ul>
+            <li>
+     <a href="index.html">sobre mim</a>
+            </li>
 
-</tr>
-  <tr>
-    <td>segunda linha e primeira coluna </td>
-    <td>segunda linha e segunda coluna</td>
-    <td>segunda linha e terceira coluna</td>
+         <li>   
+        <a href="project.html">projetos </a>
+         </li>
 
-  </tr>
-    </table>
-
+            <li>
+            <a contact.html>contatos </a>
+                <li>
+        </ul>
+    </nav>
+    <header>
+        <img src="./img/bolo.png" ></img>
+    </header>
+    
 </body>
 </html>
